# evalconfidence

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: why-it-works.md
examples/: demo.ipynb  export_scores.py  synthetic_demo.py
src/evalconfidence/: __init__.py  adapters.py  compare.py  power.py  stderr.py  types.py
tests/: test_adapters.py  test_compare.py  test_power.py  test_standard_error.py
