[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalconfidence"
version = "0.1.0.dev0"
description = "Decision-grade statistics for AI evals: paired comparisons, cluster-aware uncertainty, and power analysis on top of existing eval frameworks."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Stephen Chang" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
inspect = ["inspect-ai>=0.3"]
dev = ["pytest>=7", "pandas>=2.0"]
demo = ["matplotlib>=3.7", "jupyter>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/evalconfidence"]

[tool.pytest.ini_options]
testpaths = ["tests"]
